--- a/app/vue/src/assets/css/main.css
+++ b/app/vue/src/assets/css/main.css
@@ -369,7 +369,21 @@ a {
 .container {
   padding: 2rem;
   width: 85%;
-  float: left; }
+  float: left;
+  position: relative;
+  z-index: 15; }
+  .container.nav-open {
+    width: 100%; }
+  .container .fa-bars {
+    font-size: 1.5rem;
+    color: #35e5b3;
+    display: block;
+    position: absolute;
+    left: 2rem;
+    top: 2rem;
+    cursor: pointer; }
+    .container .fa-bars.nav-open {
+      display: none; }
 
 body {
   font-family: 'Lato', 'Arial', sans-serif;
@@ -384,7 +398,8 @@ h1 {
   letter-spacing: 1px;
   font-size: 2.5rem;
   line-height: 150%;
-  margin: 0; }
+  margin: 0;
+  margin-bottom: 1rem; }
 
 h2 {
   font-weight: 900;
@@ -393,16 +408,29 @@ h2 {
   font-size: 1.5rem; }
 
 nav {
+  position: absolute;
+  left: -15%;
   height: 100vh;
   width: 15%;
   float: left;
   background: #313133;
   color: #fff;
   text-align: center;
-  padding: 1rem 0; }
+  padding: 1rem 0;
+  transition: left 0.3s ease-in;
+  z-index: 20; }
+  nav .fa-times {
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    font-size: 1.5rem;
+    cursor: pointer; }
+  nav.nav-open {
+    position: relative;
+    left: 0; }
   nav img {
     width: 150px;
-    margin: 2rem 0 3rem; }
+    margin: 5rem 0 6rem; }
   nav li {
     list-style-type: none;
     display: block; }
@@ -515,7 +543,13 @@ section.painting {
 #contact .contactinfo {
   text-align: center; }
 #contact iframe {
+  margin-top: 2rem;
   width: 100%;
-  height: 500px; }
+  height: 460px; }
+#contact .fa {
+  border: 2px solid #35e5b3;
+  padding: 1rem;
+  width: 52px;
+  margin: 2rem 0 1rem; }
 
 /*# sourceMappingURL=main.css.map */
