--- a/app/vue/src/assets/sass/base/_base.scss
+++ b/app/vue/src/assets/sass/base/_base.scss
@@ -7,4 +7,25 @@ a {
     padding: 2rem;
     width: 85%;
     float: left;
+    position: relative;
+    z-index: 15;
+
+    &.nav-open {
+        //width: 100%;
+        width: 100%;
+    }
+
+    .fa-bars {
+        font-size: 1.5rem;
+        color: $primary-color;
+        display: block;
+        position: absolute;
+        left: 2rem;
+        top: 2rem;
+        cursor: pointer;
+
+        &.nav-open {
+            display: none;
+        }
+    }
 }
