--- a/app/vue/src/assets/sass/layout/_navigation.scss
+++ b/app/vue/src/assets/sass/layout/_navigation.scss
@@ -1,4 +1,6 @@
 nav {
+    position: absolute;
+    left: -15%;
     height: 100vh;
     width: 15%;
     float: left;
@@ -6,10 +8,25 @@ nav {
     color: #fff;
     text-align: center;
     padding: 1rem 0;
+    transition: left 0.3s ease-in;
+    z-index: 20;
+
+    .fa-times {
+        position: absolute;
+        right: 2rem;
+        top: 2rem;
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+
+    &.nav-open {
+        position: relative;
+        left: 0;
+    }
 
     img {
         width: 150px;
-        margin: 2rem 0 3rem;
+        margin: 5rem 0 6rem;
     }
     
     li {
