--- a/app/vue/src/assets/sass/pages/_contact.scss
+++ b/app/vue/src/assets/sass/pages/_contact.scss
@@ -5,7 +5,15 @@
     }
 
     iframe {
+        margin-top: 2rem;
         width: 100%;
-        height: 500px;
+        height: 460px;
+    }
+
+    .fa {
+        border: 2px solid $primary-color;
+        padding: 1rem;
+        width: 52px;
+        margin: 2rem 0 1rem;
     }
 }
