--- a/app/vue/src/assets/sass/components/_buttons.scss
+++ b/app/vue/src/assets/sass/components/_buttons.scss
@@ -8,12 +8,18 @@
     border: 2px solid $primary-color;
     display: inline-block;
     width: 100%;
-    padding: 0.8rem;
+    padding: 0.5rem;
     text-align: center;
     font-family: 'Lato', 'Arial', sans-serif;
+    font-size: 0.8rem;
 
     &:hover {
         background: rgba($primary-color, 0.1);
         color: $primary-color;
     }
+}
+
+.smallbtn {
+    width: auto;
+    
 }
