--- a/app/vue/src/assets/sass/layout/_navigation.scss
+++ b/app/vue/src/assets/sass/layout/_navigation.scss
@@ -1,7 +1,7 @@
-nav {
+nav.webapp__nav {
+    height: 100vh;
     position: absolute;
     left: -15%;
-    height: 100vh;
     width: 15%;
     float: left;
     background: $text-color;
@@ -50,4 +50,21 @@ nav {
     }
 
     
+}
+
+nav.dashboard__nav {
+    float: left;
+    width: 17%;
+    padding: 2rem;
+    li {
+        list-style-type: none;
+        margin-bottom: 2rem;
+        font-weight: 700;
+    }
+
+    .fa {
+        width: 52px;
+        font-size: 1.5rem;
+        color: $primary-color;
+    }
 }
