--- a/app/vue/src/assets/sass/main.scss
+++ b/app/vue/src/assets/sass/main.scss
@@ -17,6 +17,7 @@
 @import 'layout/footer';
 @import 'layout/sidebar';
 @import 'layout/forms';
+@import 'layout/canvas';
 
 @import 'components/buttons';
 @import 'components/carousel';
