--- a/app/vue/src/assets/sass/base/_typography.scss
+++ b/app/vue/src/assets/sass/base/_typography.scss
@@ -18,7 +18,7 @@ h1 {
 
 h2 {
     font-weight: 900;
-    text-transform: uppercase;
     letter-spacing: 1px;
     font-size: 1.5rem;
+    color: $primary-color;
 }
