--- a/app/vue/src/assets/sass/layout/_navigation.scss
+++ b/app/vue/src/assets/sass/layout/_navigation.scss
@@ -56,6 +56,10 @@ nav.dashboard__nav {
     float: left;
     width: 17%;
     padding: 2rem;
+
+    h1 {
+        font-size: 1.5rem;
+    }
     li {
         list-style-type: none;
         margin-bottom: 2rem;
