--- a/app/vue/src/assets/css/main.css
+++ b/app/vue/src/assets/css/main.css
@@ -368,11 +368,14 @@ a {
 
 .container {
   padding: 2rem;
-  width: 85%;
+  margin-left: 300px;
+  width: calc(100% - 300px);
   float: left;
   position: relative;
-  z-index: 15; }
+  z-index: 15;
+  transition: width 0.3s; }
   .container.nav-open {
+    margin-left: 0;
     width: 100%; }
   .container .fa-bars {
     font-size: 1.5rem;
@@ -408,10 +411,10 @@ h2 {
   font-size: 1.5rem; }
 
 nav {
-  position: absolute;
-  left: -15%;
+  position: fixed;
+  left: -300px;
   height: 100vh;
-  width: 15%;
+  width: 300px;
   float: left;
   background: #313133;
   color: #fff;
@@ -426,7 +429,7 @@ nav {
     font-size: 1.5rem;
     cursor: pointer; }
   nav.nav-open {
-    position: relative;
+    position: fixed;
     left: 0; }
   nav img {
     width: 150px;
@@ -506,8 +509,7 @@ form textarea {
   min-height: 200px; }
 
 .art {
-  position: relative;
-  height: 100vh; }
+  position: relative; }
   .art section {
     width: 100%;
     position: relative;
