--- a/app/vue/src/assets/sass/base/_base.scss
+++ b/app/vue/src/assets/sass/base/_base.scss
@@ -5,13 +5,15 @@ a {
 
 .container {
     padding: 2rem;
-    width: 85%;
+    margin-left: 300px;
+    width: calc(100% - 300px);
     float: left;
     position: relative;
     z-index: 15;
+    transition: width 0.3s;
 
     &.nav-open {
-        //width: 100%;
+        margin-left: 0;
         width: 100%;
     }
 
