--- a/app/vue/src/assets/sass/layout/_navigation.scss
+++ b/app/vue/src/assets/sass/layout/_navigation.scss
@@ -1,8 +1,8 @@
 nav {
-    position: absolute;
-    left: -15%;
+    position: fixed;
+    left: -300px;
     height: 100vh;
-    width: 15%;
+    width: 300px;
     float: left;
     background: $text-color;
     color: #fff;
@@ -20,7 +20,7 @@ nav {
     }
 
     &.nav-open {
-        position: relative;
+        position: fixed;
         left: 0;
     }
 
@@ -48,6 +48,4 @@ nav {
             }
         }
     }
-
-    
 }
