--- a/app/vue/src/assets/sass/base/_base.scss
+++ b/app/vue/src/assets/sass/base/_base.scss
@@ -10,7 +10,7 @@ a {
     float: left;
     position: relative;
     z-index: 15;
-    transition: width 0.3s;
+    transition: all 0.3s ease-in;
 
     &.nav-open {
         margin-left: 0;
