--- a/app/vue/src/assets/sass/layout/_canvas.scss
+++ b/app/vue/src/assets/sass/layout/_canvas.scss
@@ -27,11 +27,25 @@
         }
     }
 
+    section.controls {
+        width: calc(100% - 250px);
+        float: left;
+    }
+
     article {
         width: 250px;
         float: left;
         padding: 10px;
         padding-right: 20px;
+
+        input {
+            display: block;
+            margin: 0.5rem 0 2rem;
+            border: 2px solid $grey;
+            padding: 0.8rem;
+            width: 100%;
+            resize: vertical;
+        }
 
         h1 {
             padding: 20px 0;
@@ -80,6 +94,7 @@
 
             .row {
                 height: 30px;
+                margin: 0;
             }
 
             .color {
