--- a/app/vue/src/assets/sass/layout/_canvas.scss
+++ b/app/vue/src/assets/sass/layout/_canvas.scss
@@ -11,6 +11,7 @@
             border: 2px solid red;
             position: absolute;
             z-index: 100;
+            transition: all 0.1s;
         }
 
         canvas {
