--- a/app/vue/src/assets/css/main.css
+++ b/app/vue/src/assets/css/main.css
@@ -518,7 +518,8 @@ form textarea {
       border-radius: 50%;
       border: 2px solid red;
       position: absolute;
-      z-index: 100; }
+      z-index: 100;
+      transition: all 0.1s; }
     .art section canvas {
       width: 100%;
       border: 1px solid #555;
@@ -610,16 +611,25 @@ form textarea {
 
 section.painting {
   position: relative; }
-  section.painting .painting__image {
-    height: 330px;
-    overflow: hidden; }
-  section.painting img {
-    width: 100%; }
+  section.painting .image {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    width: 100%;
+    padding-top: 74%;
+    /* 50*37 aspect ratio */ }
+  section.painting:hover .painting__text {
+    opacity: 1; }
   section.painting .painting__text {
     position: absolute;
-    bottom: 0;
+    bottom: 1px;
+    left: 1px;
+    right: 1px;
+    opacity: 0;
     background: #fff;
-    padding: 0.8rem; }
+    padding: 0.8rem;
+    transition: opacity 0.3s; }
     section.painting .painting__text h2 {
       font-size: 1.2rem; }
 
