--- a/app/vue/src/assets/sass/layout/_navigation.scss
+++ b/app/vue/src/assets/sass/layout/_navigation.scss
@@ -28,6 +28,12 @@ nav.webapp__nav {
         width: 150px;
         margin: 5rem 0 6rem;
     }
+
+    h2 {
+        color: #fff;
+        text-transform: uppercase;
+        padding-bottom: 1rem;
+    }
     
     li {
         list-style-type: none;
@@ -45,6 +51,11 @@ nav.webapp__nav {
                 background: rgba($primary-color, 0.1);
                 color: $primary-color;
                 border-right: 5px solid $primary-color;
+            }
+
+            &.router-link-exact-active {
+                color: $primary-color;
+                font-weight: bold;
             }
         }
     }
