--- a/app/vue/src/assets/sass/main.scss
+++ b/app/vue/src/assets/sass/main.scss
@@ -28,6 +28,7 @@
 @import 'pages/home';
 @import 'pages/contact';
 @import 'pages/dashboard';
+@import 'pages/paintingdetail';
 
 @import 'themes/theme';
 @import 'themes/admin';
