--- a/app/vue/src/assets/sass/layout/_grid.scss
+++ b/app/vue/src/assets/sass/layout/_grid.scss
@@ -45,3 +45,51 @@
 .column-9 {
     width: 75%;
 }
+
+@media (min-width: 20rem) {
+	.column-sm-3 {
+		width: 25%;
+	}
+	
+	.column-sm-4 {
+		width: 33.33333%;
+	}
+	
+	.column-sm-6 {
+		width: 50%;
+	}
+	
+	.column-sm-7 {
+		width: 58.33333%;
+	}
+	
+	.column-sm-9 {
+		width: 75%;
+	}
+
+	.column-sm-12 {
+		width: 100%;
+	}
+}
+
+@media (min-width: 60rem) {
+	.column-3 {
+		width: 25%;
+	}
+	
+	.column-4 {
+		width: 33.33333%;
+	}
+	
+	.column-6 {
+		width: 50%;
+	}
+	
+	.column-7 {
+		width: 58.33333%;
+	}
+	
+	.column-9 {
+		width: 75%;
+	}
+}
