--- a/app/vue/src/assets/sass/components/_paintings.scss
+++ b/app/vue/src/assets/sass/components/_paintings.scss
@@ -17,7 +17,7 @@ section.painting {
         bottom: 1px;
         left: 1px;
         right: 1px;
-        opacity: 0;
+        opacity: 1;
         background: #fff;
         padding: 0.8rem;
         transition: opacity 0.3s;
@@ -26,4 +26,15 @@ section.painting {
             font-size: 1.2rem;
         }
     }
+}
+
+@media (min-width: 42.5rem) {
+    section.painting {
+        position: relative;
+        .painting__text {
+            opacity: 0;
+        }
+    }
+
+    
 }
