--- a/app/vue/src/assets/sass/layout/_navigation.scss
+++ b/app/vue/src/assets/sass/layout/_navigation.scss
@@ -1,13 +1,13 @@
 nav.webapp__nav {
     position: fixed;
-    left: -300px;
+    left: -100%;
     height: 100vh;
-    width: 300px;
+    width: 100vw;
     float: left;
     background: $text-color;
     color: #fff;
     text-align: center;
-    padding: 1rem 0;
+    padding: 7rem 0;
     transition: left 0.3s ease-in;
     z-index: 20;
 
@@ -25,8 +25,7 @@ nav.webapp__nav {
     }
 
     img {
-        width: 150px;
-        margin: 5rem 0 6rem;
+        display: none;
     }
 
     h2 {
@@ -81,5 +80,19 @@ nav.dashboard__nav {
         width: 52px;
         font-size: 1.5rem;
         color: $primary-color;
+    }
+}
+
+@media (min-width: 42.5rem) {
+    nav.webapp__nav {
+        left: -300px;
+        width: 300px;
+        padding: 1rem 0;
+
+        img {
+            display: block;
+            width: 150px;
+            margin: 5rem 0 6rem;
+        }
     }
 }
