--- a/app/vue/src/assets/css/main.css
+++ b/app/vue/src/assets/css/main.css
@@ -776,7 +776,8 @@ section.painting {
       text-align: left; }
     .dashboard table.overview__table td {
       border-top: 1px solid #c7d1cd;
-      padding: 0 0.5rem; }
+      padding: 0 0.5rem;
+      vertical-align: middle; }
     .dashboard table.detail__table td {
       padding: 0.5rem; }
       .dashboard table.detail__table td:first-child {
@@ -785,7 +786,9 @@ section.painting {
     .dashboard table .cell__image {
       text-align: center; }
     .dashboard table img {
-      height: 50px; }
+      height: 70px;
+      vertical-align: middle;
+      padding: 0.5rem; }
     .dashboard table .fa {
       padding: 5px;
       font-size: 1.2rem;
