--- a/app/vue/src/assets/sass/pages/_dashboard.scss
+++ b/app/vue/src/assets/sass/pages/_dashboard.scss
@@ -29,6 +29,7 @@
         &.overview__table td {
             border-top: 1px solid $grey;
             padding: 0 0.5rem;
+            vertical-align: middle;
         }
 
         &.detail__table td {
@@ -43,7 +44,9 @@
             text-align: center;
         }
         img {
-            height: 50px;
+            height: 70px;
+            vertical-align: middle;
+            padding: 0.5rem;
         }
 
         .fa {
