--- a/app/style-guide/style/style.css
+++ b/app/style-guide/style/style.css
@@ -50,7 +50,7 @@ h1, h2, h3, h4, h5, h6 {
 
 main {
   width: 1140px;
-  margin: 0 auto 200px; }
+  margin: 100px auto; }
   main h4 {
     font-size: 1.5rem;
     padding: 50px 0 30px; }
@@ -73,7 +73,7 @@ main {
   main button {
     border: 3px solid #35e5b3;
     background: #35e5b3;
-    color: #ececec;
+    color: white;
     border-radius: 5px;
     padding: 10px 80px;
     font-weight: bold;
@@ -85,6 +85,14 @@ main {
     main button.disabled {
       background: #cbc8c9;
       border-color: #cbc8c9; }
+  main input {
+    display: block;
+    margin: 0.5rem 0 2rem;
+    border: 2px solid #ececec;
+    padding: 0.8rem;
+    width: 100%;
+    resize: vertical;
+    font-size: 1rem; }
   main .colors {
     width: 100%;
     overflow: hidden; }
