--- a/app/vue/src/assets/sass/layout/_navigation.scss
+++ b/app/vue/src/assets/sass/layout/_navigation.scss
@@ -90,7 +90,7 @@ nav.dashboard__nav {
         padding: 1rem 0;
 
         img {
-            display: block;
+            display: inline;
             width: 150px;
             margin: 5rem 0 6rem;
         }
